load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

licenses(["notice"])  # Apache 2.0

package(default_visibility = ["//visibility:public"])

go_library(
    name = "zip",
    srcs = ["zip.go"],
    importpath = "github.com/google/safearchive/zip",
    visibility = ["//visibility:public"],
    deps = ["//sanitizer"],
)

alias(
    name = "go_default_library",
    actual = ":zip",
    visibility = ["//visibility:public"],
)

go_test(
    name = "zip_test",
    size = "small",
    srcs = ["zip_test.go"],
    embed = [":zip"],
    embedsrcs = glob(["*.zip"]),
    deps = [
    ],
)
